--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
+    "build": "tsc -b && vite build",
     "lint": "npm run lint --workspace=client"
   },
   "workspaces": [
