--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
-      - name: Go to the client
-        run: cd client
       - name: Build
+        working-directory: ./client
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
