--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,7 @@ jobs:
         run: npm ci
 
       - name: Build
+        working-directory: ./client
         run: npm run build
 
       - name: Run ESLint
