--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_OPTIONS='--inspect --openssl-legacy-provider' npm run build --prefix frontend",
-    "start-backend": "npx start-server -s ./frontend/build",
-    "start-frontend": "cd frontend && npm start",
+    "start-backend": "npx start-server -s ../client/dist",
+    "start-frontend": "cd ../client && npm run dev",
     "start-dev": "REACT_APP_SERVER_URL=http://localhost:3000 concurrently \"npm run start-frontend\" \"npm run start-backend\"",
     "start": "start-server"
   },
